fix broken index links

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -6,7 +6,7 @@
 
 
 body{
-    background:url('../Images/pexels-philippe-donn-1169754.png');
+    background:url('../images/pexels-philippe-donn-1169754.png');
     height:100%;
     background-position:center;
     background-repeat:no-repeat;
